# translocate

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  package-lock.json  package.json
.gitea/workflows/: build.yml  publish.yml  test.yml
.github/workflows/: build.yml
node_scripts/: get_binary.js  get_binary.mjs  install.js  install.mjs  run.mjs  simple-binary-install.js  uninstall.js  uninstall.mjs
scripts/: get_binary.js  run.js  uninstall.js
src/: generators.rs  lib.rs  main.rs  translations.rs
tests/: app.rs
