[package]
name = "translocate"
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/translocate"
repository = "https://code.orbitsolutions.dev/orb-it-solutions/translocate"
readme = "README.md"
keywords = [
  "csv",
  "i18n",
  "internationalization",
  "json",
  "l10n",
  "localization",
]
categories = ["command-line-utilities", "encoding", "internationalization", "localization"]
exclude = [".gitea/*", ".github/*", ".vscode/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"