[package]
name = "translocate"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "translocate is a high performance converter that takes CSV translation files and outputs corresponding JSON translation files."
documentation = "https://docs.rs/translocate"
repository = "https://code.orbitsolutions.dev/orb-it-solutions/translocate"
readme = "README.md"
keywords = [
  "csv",
  "i18n",
  "internationalization",
  "json",
  "localization",
]
categories = ["command-line-utilities", "encoding", "internationalization", "localization"]
exclude = [".gitea/*", ".github/*", ".vscode/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
