[package]
name = "translocate"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "translocate is a high performance converter that takes CSV translation files and outputs corresponding JSON translation files."
documentation = "https://docs.rs/translocate"
repository = "https://code.orbitsolutions.dev/orb-it-solutions/translocate"
readme = "README.md"
keywords = [
  "csv",
  "i18n",
  "internationalization",
  "json",
  "localization",
]
categories = ["command-line-utilities", "encoding", "internationalization", "localization"]
exclude = [".gitea/*", ".github/*", ".vscode/*"]

[dependencies]
argh = "0.1.12"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yansi = "1.0.0-rc.1"

[profile.release]
strip = true
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1